adding media queries

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -23,16 +25,18 @@
       <div class="contain">
         <div class="shapes-text">
           <div class="shapes">
-              <div id="hexagon" class="hexagon-circle" id="one"></div>
-              <div id="triangle" class="triangle-square" id="two"></div>
+              <div id="hexagon" class="hexagon" id="one"></div>
+              <div id="triangle" class="triangle" id="two"></div>
               <div id="circle" class="circle" id="four"></div>
-              <div id="square" class="triangle-square" id="three"></div>
+              <div id="square" class="square" id="three"></div>
           </div>
-          <div class="text">Le estámos exprimiendo el jugo
+          <div class="text">Le estámos exprimiendo el jugo <br class="space">
               para entregarte la mejor experiencia...</div>
+              <br>
+              
         </div>
           <div class="logo">
-              <object type="image/svg+xml" data="/logo.svg">
+              <object type="image/svg+xml" data="/codigo_naranja.svg">
                 Your browser does not support SVG
               </object>
       </div>
